--- a/public/asset/css/qcm.css
+++ b/public/asset/css/qcm.css
@@ -171,9 +171,10 @@ body {
     transition: all 0.3s;
     overflow-x: hidden;
     display: flex;
-    height: 100vh;
+    min-height: 100vh;
     flex-direction: column;
     font-family: "josefin sans", sans-serif;
+    justify-content: space-between;
 }
 
 
@@ -247,15 +248,6 @@ body {
     100% { transform: translateY(-100px); opacity: 0; }
 }
 
-.navbar {
-    background: rgba(10, 25, 47, 0.9);
-    padding: 1rem;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    backdrop-filter: blur(10px);
-    z-index: 1000;
-}
 
 #play-button {
     position: fixed;
@@ -481,4 +473,27 @@ body {
 body > div:nth-child(2){
     display: flex;
 }
+
+
+/*navBar */
+
+nav img{
+    width: 1.3vw;
+}
+
+
+
+/* footer */
+
+footer {
+    display: flex;
+    color:white;
+}
+
+footer p {
+    text-align: center;
+    width: 100vw;
+}
+
+
 
