--- a/public/asset/css/podcast.css
+++ b/public/asset/css/podcast.css
@@ -24,6 +24,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px 40px;
+    z-index: 999;
 }
 
 header .logo {
