--- a/public/asset/css/qcm.css
+++ b/public/asset/css/qcm.css
@@ -36,13 +36,17 @@ nav ul li a:hover {
     color: #00ffaa;
 }
 
+
+
 .quiz-container {
-    max-width: 600px;
-    margin: 2rem auto;
+    max-width: 800px;
+    width: 30vw;
+    margin: 100px 100px 400px 100px;
     padding: 2rem;
-    background: #f9f9f9;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    background: rgba(30, 61, 89, 0.3);
+    border-radius: 15px;
+    backdrop-filter: blur(5px);
+    display: none;
 }
 
 .question {
@@ -270,16 +274,7 @@ body {
     transform: translate(-50%, -50%) scale(1.1);
 }
 
-.quiz-container {
-    max-width: 800px;
-    width: 30vw;
-    margin: 100px 100px 100px 100px;
-    padding: 2rem;
-    background: rgba(30, 61, 89, 0.3);
-    border-radius: 15px;
-    backdrop-filter: blur(5px);
-    display: none; /* Initially hidden */
-}
+
 
 .question {
     margin-bottom: 2rem;
